"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "main/version.cc".

2006-02-20	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-77-12-merged-aggregate-01-10:
	  Branch merge.
	  Summary: implemented basic aggreegate value/instance references.
		Includes major rework of the reference class hierarchy.
		Some bug fixes and library fixes along the way.
	  Also fixed scripts/promote_header_deps.awk to work properly
		with any VPATH, by stripping away $(srcdir)/$(subdir)
		in output dependencies, also updated Make.hchk-tail.
	  Details below.  
	

	* HACKT-00-01-04-main-00-77-11:
	  Cross-checking against g++-4.1 (RC1, 20060219).
	  Instantiated template classes in the correct namespaces.
	  Minor fixes described in util/ChangeLog.
	  Now ready for 4.1 prime-time!


2006-02-20	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-77-8-aggregate-01-10:
	  Minor clean-up only.  
	  End of branch, merge to trunk.


	* HACKT-00-01-04-main-00-77-8-aggregate-01-09:
	  Implemented aggregate_meta_instance_reference (.tcc), 
		and instantiated aggregate template classes.  
	  Moved some common functions from simple_meta_instance_reference
		to meta_instance_reference (generic constructions).  
	  Added necessary type_key and util::what specializations.  
	  Trival updates of some test cases, due to string changes.
	  Enabled bunch of basic 1D-array construction test cases (work).
	  Branch status: nearly complete.


	* HACKT-00-01-04-main-00-77-8-aggregate-01-08:
	  Committed deprecation of assign_value_collection from last revision.
	  Renamed param/value_refs unroll_resolve -> unroll_resolve_rvalues.
	  Renamed value_refs' unroll_references -> unroll_lvalue_references.
	  Other similar trivial renaming for clarity.  


2006-02-19	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-77-8-aggregate-01-07: