@@ -1,0 +1,104 @@
+
+Persistent Object Manager text dump: 
+	i	addr		type		arg	head	tail	size
+	0	##ADDR##	________	0	#HEAD#	#TAIL#	0
+	1	##ADDR##	module__	0	#HEAD#	#TAIL#	##SIZE##
+	2	##ADDR##	namespc_	0	#HEAD#	#TAIL#	32
+	3	##ADDR##	procdefn	0	#HEAD#	#TAIL#	268
+	4	##ADDR##	pintcoll	0	#HEAD#	#TAIL#	33
+	5	##ADDR##	pintinst	0	#HEAD#	#TAIL#	16
+	6	##ADDR##	pintcoll	1	#HEAD#	#TAIL#	29
+	7	##ADDR##	pintinst	0	#HEAD#	#TAIL#	16
+	8	##ADDR##	drnglst_	0	#HEAD#	#TAIL#	16
+	9	##ADDR##	dynrng__	0	#HEAD#	#TAIL#	16
+	10	##ADDR##	cnstpi__	0	#HEAD#	#TAIL#	12
+	11	##ADDR##	piarthex	0	#HEAD#	#TAIL#	17
+	12	##ADDR##	spimvref	0	#HEAD#	#TAIL#	16
+	13	##ADDR##	cnstpi__	0	#HEAD#	#TAIL#	12
+	14	##ADDR##	cnstpi__	0	#HEAD#	#TAIL#	12
+	15	##ADDR##	cnstpic_	1	#HEAD#	#TAIL#	44
+	16	##ADDR##	pintcoll	0	#HEAD#	#TAIL#	33
+	17	##ADDR##	pintcoll	1	#HEAD#	#TAIL#	65
+	18	##ADDR##	cnstpi__	0	#HEAD#	#TAIL#	12
+	19	##ADDR##	cnstpic_	1	#HEAD#	#TAIL#	44
+	20	##ADDR##	pintcoll	0	#HEAD#	#TAIL#	33
+	21	##ADDR##	pintcoll	1	#HEAD#	#TAIL#	65
+	22	##ADDR##	proccoll	0	#HEAD#	#TAIL#	48
+	23	##ADDR##	cprmlst_	0	#HEAD#	#TAIL#	20
+	24	##ADDR##	procinst	0	#HEAD#	#TAIL#	24
+	25	##ADDR##	proctprf	0	#HEAD#	#TAIL#	20
+	26	##ADDR##	dprmlst_	0	#HEAD#	#TAIL#	20
+	27	##ADDR##	cnstpi__	0	#HEAD#	#TAIL#	12
+	28	##ADDR##	apimvref	0	#HEAD#	#TAIL#	25
+	29	##ADDR##	cnstpi__	0	#HEAD#	#TAIL#	12
+	30	##ADDR##	cnstpi__	0	#HEAD#	#TAIL#	12
+	31	##ADDR##	cnstpi__	0	#HEAD#	#TAIL#	12
+	32	##ADDR##	proccoll	0	#HEAD#	#TAIL#	48
+	33	##ADDR##	cprmlst_	0	#HEAD#	#TAIL#	20
+	34	##ADDR##	procinst	0	#HEAD#	#TAIL#	24
+	35	##ADDR##	proctprf	0	#HEAD#	#TAIL#	20
+	36	##ADDR##	dprmlst_	0	#HEAD#	#TAIL#	20
+	37	##ADDR##	cnstpi__	0	#HEAD#	#TAIL#	12
+	38	##ADDR##	apimvref	0	#HEAD#	#TAIL#	25
+	39	##ADDR##	cnstpi__	0	#HEAD#	#TAIL#	12
+	40	##ADDR##	cnstpi__	0	#HEAD#	#TAIL#	12
+	41	##ADDR##	cnstpi__	0	#HEAD#	#TAIL#	12
+
+In module created from: ##FILE## (unrolled) (created)
+In namespace "", we have: {
+  0 parameter-collections
+  2 instantiation-collections
+  0 sub-namespaces
+  1 definitions
+  0 typedefs
+  Definitions:
+    foo = process-definition (defined) foo<
+      pint<> M
+      pint<> N with indices: {
+      }
+
+      >(
+      )
+      In definition "foo", we have: {
+      Parameters:
+        M = pint<> M
+        N = pint<> N with indices: {
+        }
+
+      unroll sequence: 
+        pint<> M
+        pint<> N[0..M-1]
+      footprint collection: {
+        <3, {1,2,3}> {
+          pint^0 M value: ?
+          pint^1 N with indices: {
+          }
+            unrolled index-value pairs: {
+              0 = ?
+              1 = ?
+              2 = ?
+            }
+        }
+        <3, {7,8,9}> {
+          pint^0 M value: ?
+          pint^1 N with indices: {
+          }
+            unrolled index-value pairs: {
+              0 = ?
+              1 = ?
+              2 = ?
+            }
+        }
+      }
+      }
+
+  Instances:
+    bar = process foo<3, {1,2,3}>^0 bar (instantiated) = ::bar (1) 
+    baz = process foo<3, {7,8,9}>^0 baz (instantiated) = ::baz (2) 
+}
+
+Created state:
+process instance pool:
+1	::bar
+2	::baz
+
