@@ -1,0 +1,11 @@
+// "081.hac" should pass
+// copy-modified from "080.hac"
+// testing passing of aggregate values to template parameter
+
+template <pint M; pint N[M]>
+defproc foo() { }
+
+foo<3, {1,2,3}> bar;
+foo<3, {7,8,9}> baz;
+
+
