@@ -1,5 +1,5 @@
 # "test/parser/template/Makefile.am"
-#	$Id: Makefile.am,v 1.17 2006/02/21 04:51:21 fang Exp $
+#	$Id: Makefile.am,v 1.18 2006/02/21 18:13:37 fang Exp $
 
 include $(top_srcdir)/test/Make.test-head
 
@@ -23,7 +23,7 @@ HACKT_PARSE_TEST_PASSES = \
 	055 056 057 058 059 \
 	061 062 063 064 067 068 \
 	070 071 072 073 073a 074 075 076 077 078 079 \
-	080
+	080 081 082 083
 
 # KNOWN BUGS:
 # should fail at unroll-time:
@@ -50,7 +50,8 @@ HACKT_CREATE_TEST_SUBJECTS = \
 	045 046 049 \
 	059 \
 	061 062 063 064 068 \
-	070 073 074 075 076 077 079
+	070 073 074 075 076 077 079 \
+	081
 
 HACKT_ALLOC_TEST_SUBJECTS = \
 	008 009 \
@@ -59,7 +60,8 @@ HACKT_ALLOC_TEST_SUBJECTS = \
 	038 \
 	049 \
 	068 \
-	070 073 074 075 076 077 079
+	070 073 074 075 076 077 079 \
+	081
 
 HACKT_CFLAT_TEST_SUBJECTS = \
 	074 075 079
